adicionando a modificação na stg_adv_works_products e sources.yml. adicionando as stg novas (credit cars, address, customers e sales reason)

--- a/adventure_works/models/staging/sources.yml
+++ b/adventure_works/models/staging/sources.yml
@@ -20,7 +20,7 @@ sources:
       - name: creditcard
         description: "Tabela com os tipos de cartão de crédito utilizados nos pedidos de venda da Adventure Works"
   
-      - name: customers
+      - name: customer
         description: "Tabela staging de clientes da Adventure Works"
 #        columns:
 #          - name: id
